samples/_failures_safe/1761328396_fbc963_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5051b947.c:163:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  163 | int read
      | ^~~
